@@ -1,127 +1,145 @@
-### Name: Lovro Music | Matrikelnummer: 5517961
+# Projekt Belot
 
-# Belot: A Pure Java Implementation with JShell Control
+Belot is a single-player web implementation of the card game Belot. The game logic lives in a Java engine, the server is Spring Boot, and the browser UI is React.
 
----
+## What The Project Is Now
 
-## Setup
+- `engine`: pure Java match engine and view DTOs
+- `server`: Spring Boot session API and SSE event stream
+- `webclient`: React frontend with a table view and terminal log
 
-The interaction with the Belot game is done through **JShell** in the Command Prompt (ensure to use Command Prompt, NOT PowerShell). The following steps provide detailed instructions for setting up and running the game.
+The current version supports one human player against three AI players in the browser.
 
-## How to Run
+## Requirements
 
-### Step-by-Step Instructions:
+- Java 21+
+- Node.js 20+ and npm
+- Windows PowerShell or another shell that can run Gradle and npm
 
-1. **Open Command Prompt in the Project Directory**  
-   Navigate to the source code directory:  
-   ```shell
-   cd src
-   ```
+## Quick Start
 
-2. **Set Console Encoding to UTF-8**  
-   Ensure the console is using UTF-8 encoding for proper character rendering:  
-   ```shell
-   chcp 65001
-   ```
+Run the full application:
 
-3. **Compile the Project Code**  
-   Compile the Java files into the `out` directory:  
-   ```shell
-   javac -d out models/*.java controllers/*.java ai/*.java
-   ```
+```bash
+./gradlew runGame
+```
 
-4. **Launch JShell with Required Options**  
-   Start **JShell** in preview mode with the `out` directory as the class path:  
-   ```shell
-   jshell --class-path out --enable-preview
-   ```
+Then open:
 
-5. **Load the `run.jsh` File**  
-   Open the `run.jsh` file in JShell to load the game and activate **lvp**:  
-   ```shell
-   /open run.jsh
-   ```
+```text
+http://localhost:8080
+```
 
-6. **Start the Game**  
-   Follow one of the options below:
+## Run On A Custom Port
 
-   - Open the code documentation:
-     ```shell
-     /o codeDocu.java
-     x.play();
-     ```
-   
-   - Create a new `Match` instance:  
-     ```shell
-     Match match = new Match();
-     match.play();
-     ```
-   
-   - Use the `TurtlePlay` instance for graphical simulation (requires a `Turtle`):  
-     ```shell
-     Turtle turtle = new Turtle(600, 400);
-     TurtlePlay x = new TurtlePlay(turtle);
-     x.play();
-     ```
+If `8080` is already in use:
 
----
+```bash
+./gradlew runGame -PserverPort=28081
+```
 
-## Game Commands
+Then open:
 
-The following table lists the commands available for interacting with the Belot game via JShell:
+```text
+http://localhost:28081
+```
 
-| **Command**        | **Description**                                                                 |
-|---------------------|---------------------------------------------------------------------------------|
-| `play()`           | Starts the match by transitioning to the first/next phase.                         |
-| `startGame()`      | Begins the game and initiates the first game.                                 |
-| `pickTrump(int x)` | Selects the trump card, where `x` is the chosen option.                        |
-| `startRound()`     | Starts a round after the trump card has been selected.                        |
-| `pickCard(int x)`  | Plays a card from the hand, where `x` is the position of the card.             |
-| `endGame()`        | Ends the current round and proceeds to score calculation.                     |
-| `endMatch()`       | Ends the entire match and displays the final results.                         |
-| `goBack()`         | Rolls back to a previous game state (Undo functionality).                     |
+## Development Commands
 
----
+Build everything:
 
-## Notes
+```bash
+./gradlew build
+```
 
-1. Ensure you are using **Command Prompt**, not PowerShell, for proper UTF-8 rendering.
-2. If you experience improper character rendering, verify that UTF-8 is properly configured using  
-   ```shell
-   chcp 65001
-   ```
-3. The `lvp` mode is activated under `http://localhost:50001` once `run.jsh` is opened. This step is essential for enabling proper console output and display.
+Run engine tests:
 
-### In case of server isuse: Free Port 50001 in Windows and reload
+```bash
+./gradlew :engine:test
+```
 
-1. **Find the process using port 50001**:  
-   ```bash
-   netstat -ano | findstr :50001
-   ```
-   - Note the **PID** from the output.
+Run server tests:
 
-2. **Kill the process**:  
-   ```bash
-   taskkill /PID [PID_NUMBER] /F
-   ```
-   - Replace `[PID_NUMBER]` with the PID from step 1. Done! 🎉 
+```bash
+./gradlew :server:test
+```
 
----
-## Summary
+Run frontend tests:
 
-The `Match` class in Java forms the foundation for a Belot (Bela) game simulation. It manages the gameplay using a **state machine** that transitions through several game phases:
+```bash
+cd webclient
+npm test
+```
 
-1. **Start**
-2. **Trump Selection**
-3. **Zvanje**
-4. **Playing Rounds**
-5. **Game End**
-6. **Match End**
+## Project Layout
 
-Each phase is handled by methods of the `Match` class, which in turn rely on functionality from the `Game` class (for game logic) and the `Round` class (for individual rounds). 
+```text
+engine/
+  src/main/java/com/belot/engine/api
+server/
+  src/main/java/com/belot/server
+webclient/
+  src/
+```
 
-Players interact via **JShell** by calling methods like `pickTrump()` or `startRound()`. The game pauses and waits for user input whenever provided commands are incomplete. After a round or game is completed, the game state is updated, and the next phase is initiated. This cycle continues until one team reaches the required points to win the match.
+## Card Placeholders
 
-The implementation also includes a **snapshot mechanism** to allow saving the state of the game and rolling back to previous states if necessary.
+The UI uses local placeholder SVG assets for now.
 
----
+- card face placeholder: `webclient/src/assets/cards/face-placeholder.svg`
+- hidden card back: `webclient/src/assets/cards/back.svg`
+- suit placeholders: `webclient/src/assets/suits/*.svg`
+
+Visible cards always keep a short lowercase label under the card image:
+
+- `10c`
+- `ad`
+- `7s`
+
+Trump choice buttons use lowercase suit names under the suit image:
+
+- `hearts`
+- `clubs`
+- `diamonds`
+- `spades`
+
+These assets are temporary and can be replaced later without changing the backend API.
+
+## Troubleshooting
+
+### Port Already In Use
+
+Check which process owns a port:
+
+```powershell
+netstat -ano | findstr :8080
+```
+
+Inspect the PID:
+
+```powershell
+Get-Process -Id <PID>
+```
+
+Stop it if needed:
+
+```powershell
+Stop-Process -Id <PID> -Force
+```
+
+Or simply run on another port with `-PserverPort=...`.
+
+### Stale Browser Session
+
+The frontend keeps the active session id in browser storage. If a session becomes invalid, refresh the page or clear local storage for the site.
+
+### Frontend Build Artifacts
+
+The React app is built automatically by Gradle before the server starts. You do not need to copy files manually.
+
+## Current Limitations
+
+- single-player only
+- in-memory sessions only
+- placeholder card and suit art
+- no persistence between server restarts
